# Filter

./: CMakeLists.txt  FilterConfig.cmake.in
lib/: CMakeLists.txt  Designer.h  Filter.cpp  Filter.h  Polynomial.cpp  Polynomial.h  TransferFunction.cpp  TransferFunction.h
lib/Algorithm/: LowPassButterworth.h  TransferFunction.h
lib/include/vosl/Filter/: Designer.h  Filter.cpp  Filter.h  Polynomial.cpp  Polynomial.h  TransferFunction.cpp  TransferFunction.h
lib/rtb/Filter/: Designer.h  Filter.cpp  Filter.h  Polynomial.cpp  Polynomial.h  StateSpaceFilter.cpp  StateSpaceFilter.h  TransferFunction.cpp  TransferFunction.h
lib/vosl/Filter/: Designer.h  Filter.cpp  Filter.h  Polynomial.cpp  Polynomial.h  StateSpaceFilter.cpp  StateSpaceFilter.h  TransferFunction.cpp  TransferFunction.h
tests/: CMakeLists.txt  main.cpp
